examples/test/testpolicy1043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1043
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key42: value45
      key43: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value26
      podSelector:
        matchLabels:
          key19: value13
          key32: value3
